fix a bug when updating artist image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ root {
 .album-image {
     overflow:hidden;
     max-width:620px;
-    height:400px;
+    max-height:400px;
     position:relative;
     margin-bottom: 5px;
 }
