--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@ root {
     max-height:400px;
     position:relative;
     margin-bottom: 5px;
+    box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
 }
 
 .album {
