--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,21 +1,22 @@
-/* 
+/*
     Document   : main
     Created on : Jul 18, 2013, 11:00:07 PM
     Author     : lusaisai
     Description:
         Purpose of the stylesheet follows.
 */
-
-root { 
+root {
     display: block;
 }
 
 .album-image {
-    overflow:hidden;
-    max-width:620px;
-    max-height:400px;
-    position:relative;
+    overflow: hidden;
+    max-width: 620px;
+    max-height: 400px;
+    position: relative;
     margin-bottom: 5px;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
     box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
 }
 
@@ -29,5 +30,5 @@ root {
 
 .btn-group {
     margin-bottom: 1px;
-    margin-top: 1px; 
+    margin-top: 1px;
 }
