--- a/app/views/player.html
+++ b/app/views/player.html
@@ -1,44 +1,48 @@
-<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+<div id="the_player">
+		<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 
-<div id="jp_container_1" class="jp-audio">
-	<div class="jp-type-playlist">
-		<div class="jp-gui jp-interface">
-			<ul class="jp-controls">
-				<li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
-				<li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
-				<li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
-				<li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
-				<li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
-				<li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
-				<li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
-				<li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
-			</ul>
-			<div class="jp-progress">
-				<div class="jp-seek-bar">
-					<div class="jp-play-bar"></div>
-
+		<div id="jp_container_1" class="jp-audio">
+			<div class="jp-type-playlist">
+				<div class="jp-gui jp-interface">
+					<ul class="jp-controls">
+						<li><a href="javascript:;" class="jp-previous btn btn-small" tabindex="1"><i class="icon-backward"></i></a></li>
+						<li><a href="javascript:;" class="jp-play btn btn-small" tabindex="1"><i class="icon-play"></i></a></li>
+						<li><a href="javascript:;" class="jp-pause btn btn-small" tabindex="1"><i class="icon-pause"></i></a></li>
+						<li><a href="javascript:;" class="jp-next btn btn-small" tabindex="1"><i class="icon-forward"></i></a></li>
+						<li><a href="javascript:;" class="jp-stop btn btn-small" tabindex="1"><i class="icon-stop"></i></a></li>
+						<!-- <ul class="jp-toggles"> -->
+						<li><a href="javascript:;" class="jp-shuffle btn btn-small" tabindex="1" title="shuffle the playlist"><i class="icon-random"></i></a></li>
+						<li><a href="javascript:;" class="jp-shuffle-off btn btn-small" tabindex="1" title="shuffle the playlist"><i class=" icon-random"></i></a></li>
+						<li><a href="javascript:;" class="jp-repeat btn btn-small" tabindex="1" title="repeat"><i class="icon-arrow-down"></i></a></li>
+						<li><a href="javascript:;" class="jp-repeat-off btn btn-small" tabindex="1" title="repeat off"><i class="icon-repeat"></i></a></li>
+						<!-- </ul> -->
+						<br/>
+						<li><a href="javascript:;" class="jp-mute btn btn-small" tabindex="1" title="mute"><i class=" icon-volume-off"></i></a></li>
+						<li><a href="javascript:;" class="jp-unmute btn btn-small" tabindex="1" title="unmute"><i class="icon-volume-down"></i></a></li>
+						<li>
+							<div class="jp-volume-bar progress progress-success">
+								<div class="jp-volume-bar-value bar"></div>
+							</div>
+						</li>
+						<li><a href="javascript:;" class="jp-volume-max btn btn-small" tabindex="1" title="max volume"><i class="icon-volume-up"></i></a></li>
+					</ul>
+					<div class="jp-progress">
+						<div class="jp-seek-bar progress">
+							<div class="jp-play-bar bar"></div>
+						</div>
+					</div>
+					<div class="jp-current-time badge"></div>
+					<div class="jp-duration badge"></div>
+				</div>
+				<div class="jp-playlist">
+					<ul>
+						<li></li>
+					</ul>
+				</div>
+				<div class="jp-no-solution">
+					<span>Update Required</span>
+					To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
 				</div>
 			</div>
-			<div class="jp-volume-bar">
-				<div class="jp-volume-bar-value"></div>
-			</div>
-			<div class="jp-current-time"></div>
-			<div class="jp-duration"></div>
-			<ul class="jp-toggles">
-				<li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
-				<li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
-				<li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
-				<li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
-			</ul>
 		</div>
-		<div class="jp-playlist">
-			<ul>
-				<li></li>
-			</ul>
-		</div>
-		<div class="jp-no-solution">
-			<span>Update Required</span>
-			To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-		</div>
-	</div>
 </div>
