--- a/app/views/player.html
+++ b/app/views/player.html
@@ -31,8 +31,10 @@
 							<div class="jp-play-bar bar"></div>
 						</div>
 					</div>
-					<div class="jp-current-time badge"></div>
-					<div class="jp-duration badge"></div>
+					<div id="time">
+						<div class="jp-current-time badge"></div>
+						<div class="jp-duration badge"></div>
+					</div>
 				</div>
 				<div class="jp-playlist">
 					<ul>
