--- a/assets/jplayer/skin/bootstrap/style.css
+++ b/assets/jplayer/skin/bootstrap/style.css
@@ -15,8 +15,7 @@
 	display: inline;
 }
 
-
-.jp-controls,.jp-playlist ul{
+.jp-controls,.jp-playlist ul {
 	margin-left: auto;
 }
 
@@ -26,18 +25,30 @@
 	margin-bottom: 0;
 	vertical-align: text-bottom;
 	height: 15px;
-	cursor:pointer;
+	cursor: pointer;
 }
 
- .jp-progress,.jp-seek-bar,.jp-play-bar {
+.jp-progress,.jp-seek-bar,.jp-play-bar {
 	width: 238px;
-	overflow:hidden;
-	cursor:pointer;
+	overflow: hidden;
+	cursor: pointer;
 	margin-bottom: 0;
 }
 
 .jp-progress .progess,.jp-progress .bar {
+	-webkit-transition: width 0s;
+	-moz-transition: width 0s;
+	-o-transition: width 0s;
+	-ms-transition: width 0s;
 	transition: width 0s;
+}
+
+#time {
+	height: 20px;
+}
+
+.jp-current-time {
+	float: left;
 }
 
 .jp-duration {
@@ -48,9 +59,14 @@
 	margin: 5px;
 }
 
-.jp-playlist-current div{
+.jp-playlist-current div {
+	background: -webkit-linear-gradient(to bottom, #fcd6d6 0%,#f9f4f4 100%,#ff5c5c 100%);
+	background: -moz-linear-gradient(to bottom, #fcd6d6 0%,#f9f4f4 100%,#ff5c5c 100%);
+	background: -o-linear-gradient(to bottom, #fcd6d6 0%,#f9f4f4 100%,#ff5c5c 100%);
+	background: -ms-linear-gradient(to bottom, #fcd6d6 0%,#f9f4f4 100%,#ff5c5c 100%);
 	background: linear-gradient(to bottom, #fcd6d6 0%,#f9f4f4 100%,#ff5c5c 100%);
 }
+
 .jp-playlist-item-remove {
 	float: right;
 }
