--- a/assets/jplayer/skin/bootstrap/style.css
+++ b/assets/jplayer/skin/bootstrap/style.css
@@ -73,11 +73,11 @@
 }
 
 .jp-type-playlist li a:hover {
-  font-size: 125%;
   color: #000;
   -webkit-transition: 50ms ease;
   -o-transition: 50ms ease;
   transition: 50ms ease;
+  text-decoration: underline;
 }
 
 .jp-type-playlist a {
