--- a/app/views/player.html
+++ b/app/views/player.html
@@ -1,47 +1,102 @@
 <div id="the_player">
-		<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+	<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 
-		<div id="jp_container_1" class="jp-audio">
-			<div class="jp-type-playlist">
-				<div class="jp-gui jp-interface">
-					<ul class="jp-controls">
-						<li><a href="javascript:;" class="jp-previous btn btn-small" tabindex="1"><i class="icon-backward"></i></a></li>
-						<li><a href="javascript:;" class="jp-play btn btn-small" tabindex="1"><i class="icon-play"></i></a></li>
-						<li><a href="javascript:;" class="jp-pause btn btn-small" tabindex="1"><i class="icon-pause"></i></a></li>
-						<li><a href="javascript:;" class="jp-next btn btn-small" tabindex="1"><i class="icon-forward"></i></a></li>
-						<li><a href="javascript:;" class="jp-stop btn btn-small" tabindex="1"><i class="icon-stop"></i></a></li>
-						<li><a href="javascript:;" class="jp-shuffle btn btn-small" tabindex="1" title="shuffle the playlist"><i class="icon-random"></i></a></li>
-						<li><a href="javascript:;" class="jp-repeat btn btn-small" tabindex="1" title="repeat"><i class="icon-arrow-down"></i></a></li>
-						<li><a href="javascript:;" class="jp-repeat-off btn btn-small" tabindex="1" title="repeat off"><i class="icon-repeat"></i></a></li>
-						<br/>
-						<li><a href="javascript:;" class="jp-mute btn btn-small" tabindex="1" title="mute"><i class=" icon-volume-off"></i></a></li>
-						<li><a href="javascript:;" class="jp-unmute btn btn-small" tabindex="1" title="unmute"><i class="icon-volume-down"></i></a></li>
-						<li>
-							<div class="jp-volume-bar progress progress-success">
-								<div class="jp-volume-bar-value bar"></div>
-							</div>
-						</li>
-						<li><a href="javascript:;" class="jp-volume-max btn btn-small" tabindex="1" title="max volume"><i class="icon-volume-up"></i></a></li>
-					</ul>
-					<div class="jp-progress">
-						<div class="jp-seek-bar progress">
-							<div class="jp-play-bar bar"></div>
+	<div id="jp_container_1" class="jp-audio">
+		<div class="jp-type-playlist">
+			<div class="jp-gui jp-interface">
+				<ul class="jp-controls">
+					<li><a href="javascript:;" class="jp-previous btn btn-small" tabindex="1"><i class="icon-backward"></i></a></li>
+					<li><a href="javascript:;" class="jp-play btn btn-small" tabindex="1"><i class="icon-play"></i></a></li>
+					<li><a href="javascript:;" class="jp-pause btn btn-small" tabindex="1"><i class="icon-pause"></i></a></li>
+					<li><a href="javascript:;" class="jp-next btn btn-small" tabindex="1"><i class="icon-forward"></i></a></li>
+					<li><a href="javascript:;" class="jp-stop btn btn-small" tabindex="1"><i class="icon-stop"></i></a></li>
+					<li><a href="javascript:;" class="jp-shuffle btn btn-small" tabindex="1" title="shuffle the playlist"><i class="icon-random"></i></a></li>
+					<li><a href="javascript:;" class="jp-repeat btn btn-small" tabindex="1" title="repeat"><i class="icon-arrow-down"></i></a></li>
+					<li><a href="javascript:;" class="jp-repeat-off btn btn-small" tabindex="1" title="repeat off"><i class="icon-repeat"></i></a></li>
+					<br/>
+					<li><a href="javascript:;" class="jp-mute btn btn-small" tabindex="1" title="mute"><i class=" icon-volume-off"></i></a></li>
+					<li><a href="javascript:;" class="jp-unmute btn btn-small" tabindex="1" title="unmute"><i class="icon-volume-down"></i></a></li>
+					<li>
+						<div class="jp-volume-bar progress progress-success">
+							<div class="jp-volume-bar-value bar"></div>
 						</div>
-					</div>
-					<div id="time">
-						<div class="jp-current-time badge"></div>
-						<div class="jp-duration badge"></div>
+					</li>
+					<li><a href="javascript:;" class="jp-volume-max btn btn-small" tabindex="1" title="max volume"><i class="icon-volume-up"></i></a></li>
+				</ul>
+				<div class="jp-progress">
+					<div class="jp-seek-bar progress">
+						<div class="jp-play-bar bar"></div>
 					</div>
 				</div>
-				<div class="jp-playlist">
-					<ul>
-						<li></li>
-					</ul>
-				</div>
-				<div class="jp-no-solution">
-					<span>Update Required</span>
-					To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+				<div id="time">
+					<div class="jp-current-time badge"></div>
+					<div class="jp-duration badge"></div>
 				</div>
 			</div>
+			<div class="jp-playlist">
+				<ul>
+					<li></li>
+				</ul>
+			</div>
+			<div class="jp-no-solution">
+				<span>Update Required</span>
+				To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+			</div>
 		</div>
+	</div>
+	<div id="userpanel">
+		<a class="btn" href="#newplaylist" data-toggle="modal" title="save the current playlist">
+			<i class="icon-download-alt"></i>
+		</a>
+		<script>$("#userpanel a").tooltip("hide");</script>
+	</div>
 </div>
+
+<div id="newplaylist" class="modal hide fade" aria-hidden="true" role="dialog" tabindex="-1">
+	<div class="modal-header">
+		<h3>Please enter playlist name</h3>
+	</div>
+	<div class="modal-body">
+		<input type="text" placeholder="Playlist Name">
+	</div>
+	<div class="alert alert-error" style="display:none;">
+
+	</div>
+	<div class="alert alert-success" style="display:none;">
+		The platlist is saved, you can go ahead and close this window
+	</div>
+	<div class="modal-footer">
+		<a id="close" href="javascript:;" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
+		<a id="save" href="javascript:;" class="btn btn-primary">Save</a>
+	</div>
+</div>
+<script type="text/javascript">
+	$("#newplaylist #close").click(function(event) {
+		$("#newplaylist .alert").hide();
+	});
+	$("#newplaylist #save").click(function(event) {
+		var playlistName = $.trim( $("#newplaylist input").val() );
+		if ( playlistName == "" ) {
+			$("#newplaylist .alert").hide();
+			$("#newplaylist .alert-error").html("The platlist name cannot be empty");
+			$("#newplaylist .alert-error").show();
+			return false;
+		} else {
+			$("#newplaylist .alert-error").hide();
+		}
+		var songs = [];
+        $(".jp-playlist li[songid]").each(function () {
+            songs.push($(this).attr('songid'));
+        });
+        var songids = songs.join(",");
+        $.get('/m/user/saveplaylist/' + songids + "/" + playlistName, function(data) {
+        	$("#newplaylist .alert").hide();
+        	$("#newplaylist .alert-success").show();
+        }).fail( function() {
+        	$("#newplaylist .alert").hide();
+        	$("#newplaylist .alert-error").html("failed to save the playlist, please try later");
+			$("#newplaylist .alert-error").show();
+        })
+        ;
+	});
+</script>
