sync, will replace linux with windows and install linux inside vmware

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 	<div id="userpanel">
-		<a class="btn" href="#newplaylist" data-toggle="modal" title="save the current playlist">
+		<a class="btn <?php if (! Session::get( 'isLogin', false )) echo 'disabled'?>" href="#newplaylist" data-toggle="modal" title="<?php if (! Session::get( 'isLogin', false )) echo 'login and' ?> save the current playlist"   >
 			<i class="icon-download-alt"></i>
 		</a>
 		<script>$("#userpanel a").tooltip("hide");</script>
