--- a/app/views/player.html
+++ b/app/views/player.html
@@ -54,7 +54,7 @@
 
 <div id="newplaylist" class="modal hide fade" aria-hidden="true" role="dialog" tabindex="-1">
 	<div class="modal-header">
-		<h3>Please enter playlist name</h3>
+		<h3>Please enter the playlist name</h3>
 	</div>
 	<div class="modal-body">
 		<input type="text" placeholder="Playlist Name">
