--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ h1,h2,h3,h4,h5,h6,blockquote {
 }
 
 .span8 {
-  font-family: 微软雅黑,宋体,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 微软雅黑,宋体,Arial,sans-serif;
 }
 
 .album-image {
