--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@ h1,h2,h3,h4,h5,h6,blockquote {
 }
 
 .span8 {
-  font-family: 微软雅黑,宋体,Arial,sans-serif;
+  font-family: "Microsoft YaHei","Hiragino Sans GB W3",Tahoma,Arial;
+  text-shadow: 0 0 1px #EEEEEE;
 }
 
 .album-image {
