remove focus on button

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -46,7 +46,7 @@
 	</div>
 	<div id="userpanel">
 		<a class="btn <?php if (! Session::get( 'isLogin', false )) echo 'disabled'?>" href="#newplaylist" data-toggle="modal" title="<?php if (! Session::get( 'isLogin', false )) echo 'login and' ?> save the current playlist"   >
-			<i class="icon-download-alt"></i>
+			<i class="icon-list"></i>
 		</a>
 		<a class="btn" id="show-lyric" title="show the lyric">
 			<i class="icon-list-alt"></i>
