--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,3 +47,7 @@ h1,h2,h3,h4,h5,h6,blockquote {
 .playlist-name {
   width: 300px;
 }
+
+select, .btn:focus {
+   outline-color: transparent !important;
+}
