--- a/app/views/player.html
+++ b/app/views/player.html
@@ -5,27 +5,28 @@
 		<div class="jp-type-playlist">
 			<div class="jp-gui jp-interface">
 				<ul class="jp-controls">
-					<li><a href="javascript:;" class="jp-previous btn btn-small" tabindex="1"><i class="icon-backward"></i></a></li>
-					<li><a href="javascript:;" class="jp-play btn btn-small" tabindex="1"><i class="icon-play"></i></a></li>
-					<li><a href="javascript:;" class="jp-pause btn btn-small" tabindex="1"><i class="icon-pause"></i></a></li>
-					<li><a href="javascript:;" class="jp-next btn btn-small" tabindex="1"><i class="icon-forward"></i></a></li>
-					<li><a href="javascript:;" class="jp-stop btn btn-small" tabindex="1"><i class="icon-stop"></i></a></li>
-					<li><a href="javascript:;" class="jp-shuffle btn btn-small" tabindex="1" title="shuffle the playlist"><i class="icon-random"></i></a></li>
-					<li><a href="javascript:;" class="jp-repeat btn btn-small" tabindex="1" title="repeat"><i class="icon-arrow-down"></i></a></li>
-					<li><a href="javascript:;" class="jp-repeat-off btn btn-small" tabindex="1" title="repeat off"><i class="icon-repeat"></i></a></li>
+					<li><a href="javascript:;" class="jp-previous btn btn-default btn-sm" tabindex="1"><span class="glyphicon glyphicon-backward"></span></a></li>
+					<li><a href="javascript:;" class="jp-play btn btn-default btn-sm" tabindex="1"><span class="glyphicon glyphicon-play"></span></a></li>
+					<li><a href="javascript:;" class="jp-pause btn btn-default btn-sm" tabindex="1"><span class="glyphicon glyphicon-pause"></span></a></li>
+					<li><a href="javascript:;" class="jp-next btn btn-default btn-sm" tabindex="1"><span class="glyphicon glyphicon-forward"></span></a></li>
+					<li><a href="javascript:;" class="jp-stop btn btn-default btn-sm" tabindex="1"><span class="glyphicon glyphicon-stop"></span></a></li>
+					<li><a href="javascript:;" class="jp-shuffle btn btn-default btn-sm" tabindex="1" title="shuffle the playlist"><span class="glyphicon glyphicon-random"></span></a></li>
+					<li><a href="javascript:;" class="jp-shuffle-off btn btn-default btn-sm" tabindex="1" title="shuffle the playlist"><span class=" glyphicon glyphicon-random"></span></a></li>
+					<li><a href="javascript:;" class="jp-repeat btn btn-default btn-sm" tabindex="1" title="repeat"><span class="glyphicon glyphicon-arrow-down"></span></a></li>
+					<li><a href="javascript:;" class="jp-repeat-off btn btn-default btn-sm" tabindex="1" title="repeat off"><span class="glyphicon glyphicon-repeat"></span></a></li>
 					<br/>
-					<li><a href="javascript:;" class="jp-mute btn btn-small" tabindex="1" title="mute"><i class=" icon-volume-off"></i></a></li>
-					<li><a href="javascript:;" class="jp-unmute btn btn-small" tabindex="1" title="unmute"><i class="icon-volume-down"></i></a></li>
+					<li><a href="javascript:;" class="jp-mute btn btn-default btn-sm" tabindex="1" title="mute"><span class="glyphicon glyphicon-volume-off"></span></a></li>
+					<li><a href="javascript:;" class="jp-unmute btn btn-default btn-sm" tabindex="1" title="unmute"><span class="glyphicon glyphicon-volume-down"></span></a></li>
 					<li>
-						<div class="jp-volume-bar progress progress-success">
-							<div class="jp-volume-bar-value bar"></div>
+						<div class="jp-volume-bar progress">
+							<div class="jp-volume-bar-value progress-bar progress-bar-success"></div>
 						</div>
 					</li>
-					<li><a href="javascript:;" class="jp-volume-max btn btn-small" tabindex="1" title="max volume"><i class="icon-volume-up"></i></a></li>
+					<li><a href="javascript:;" class="jp-volume-max btn btn-default btn-sm" tabindex="1" title="max volume"><span class="glyphicon glyphicon-volume-up"></span></a></li>
 				</ul>
 				<div class="jp-progress">
 					<div class="jp-seek-bar progress">
-						<div class="jp-play-bar bar"></div>
+						<div class="jp-play-bar progress-bar"></div>
 					</div>
 				</div>
 				<div id="time">
@@ -45,32 +46,13 @@
 		</div>
 	</div>
 	<div id="userpanel">
-		<a class="btn <?php if (! Session::get( 'isLogin', false )) echo 'disabled'?>" href="#newplaylist" data-toggle="<?php if ( Session::get( 'isLogin', false )) echo 'modal'?>" title="<?php if (! Session::get( 'isLogin', false )) echo 'login and' ?> save the current playlist"   >
-			<i class="icon-list"></i>
+		<a class="btn btn-default btn-sm <?php if (! Session::get( 'isLogin', false )) echo 'disabled'?>" id="newplaylist" title="<?php if (! Session::get( 'isLogin', false )) echo 'login and' ?> save the current playlist"   >
+			<span class="glyphicon glyphicon-list"></span>
 		</a>
-		<a class="btn" id="show-lyric" title="show the lyric">
-			<i class="icon-list-alt"></i>
+		<a class="btn btn-default btn-sm" id="show-lyric" title="show the lyric">
+			<span class="glyphicon glyphicon-list-alt"></span>
 		</a>
 		<script>$("#userpanel a").tooltip("hide");</script>
-	</div>
-</div>
-
-<div id="newplaylist" class="modal hide fade" aria-hidden="true" role="dialog" tabindex="-1">
-	<div class="modal-header">
-		<h3>Please enter the playlist name</h3>
-	</div>
-	<div class="modal-body">
-		<input type="text" placeholder="Playlist Name">
-	</div>
-	<div class="alert alert-error" style="display:none;">
-
-	</div>
-	<div class="alert alert-success" style="display:none;">
-		The platlist is saved, you can go ahead and close this window
-	</div>
-	<div class="modal-footer">
-		<a id="close" href="javascript:;" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
-		<a id="save" href="javascript:;" class="btn btn-primary">Save</a>
 	</div>
 </div>
 <script type="text/javascript">
@@ -80,33 +62,21 @@
 			bootbox.alert(data);
 		});
 	});
-	$("#newplaylist #close").click(function(event) {
-		$("#newplaylist .alert").hide();
-	});
-	$("#newplaylist #save").click(function(event) {
-		var playlistName = $.trim( $("#newplaylist input").val() );
-		if ( playlistName == "" ) {
-			$("#newplaylist .alert").hide();
-			$("#newplaylist .alert-error").html("The platlist name cannot be empty");
-			$("#newplaylist .alert-error").show();
-			return false;
-		} else {
-			$("#newplaylist .alert-error").hide();
-		}
-		var songs = [];
-        $(".jp-playlist li[songid]").each(function () {
-            songs.push($(this).attr('songid'));
-        });
-        var songids = songs.join(",");
-        $.get('/m/user/saveplaylist/' + songids + "/" + playlistName, function(data) {
-        	$("#newplaylist .alert").hide();
-        	$("#newplaylist .alert-success").show();
-        	$('#content').load('/m/user/showplaylist');
-        }).fail( function() {
-        	$("#newplaylist .alert").hide();
-        	$("#newplaylist .alert-error").html("failed to save the playlist, please try later");
-			$("#newplaylist .alert-error").show();
-        })
-        ;
+
+	$('#newplaylist').click(function(event) {
+		bootbox.prompt("Please enter the playlist name", function(playlistName) {                
+			if (playlistName !== null && $.trim(playlistName) !== "" ) {
+				var songs = [];
+		        $(".jp-playlist li[songid]").each(function () {
+		            songs.push($(this).attr('songid'));
+		        });
+		        var songids = songs.join(",");
+		        $.get('/m/user/saveplaylist/' + songids + "/" + playlistName, function(data) {
+		        	bootbox.alert("Playlist saved");
+		        }).fail( function() {
+		        	bootbox.alert("Failed to save the playlist, please try later");
+		        });
+			}
+		});
 	});
 </script>
