--- a/assets/jplayer/skin/bootstrap/style.css
+++ b/assets/jplayer/skin/bootstrap/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .jp-audio {
-  width: 238px;
+  width: 224px;
   background: -webkit-radial-gradient(ellipse at center, #feffff 0%,#d2ebf9 100%);
   background: -o-radial-gradient(ellipse at center, #feffff 0%,#d2ebf9 100%);
   background: -ms-radial-gradient(ellipse at center, #feffff 0%,#d2ebf9 100%);
@@ -22,12 +22,13 @@
 .jp-controls,
 .jp-playlist ul {
   margin-left: auto;
+  padding-left: 0;
 }
 
 .jp-volume-bar,
 .jp-volume-bar-value {
   display: inline-block;
-  width: 158px;
+  width: 148px;
   margin-bottom: 0;
   vertical-align: text-bottom;
   height: 15px;
@@ -37,14 +38,14 @@
 .jp-progress,
 .jp-seek-bar,
 .jp-play-bar {
-  width: 238px;
+  width: 224px;
   overflow: hidden;
   cursor: pointer;
   margin-bottom: 0;
 }
 
 .jp-progress .progess,
-.jp-progress .bar {
+.jp-progress .progress-bar {
   -webkit-transition: width 0s;
   -o-transition: width 0s;
   -ms-transition: width 0s;
