get text/lrc lyric from baidu search

--- a/assets/jplayer/skin/bootstrap/style.css
+++ b/assets/jplayer/skin/bootstrap/style.css
@@ -81,3 +81,7 @@ font: 'MisoRegular';
 .jp-volume-max,.jp-repeat-off,.jp-repeat {
   float: right;
 }
+
+div.jp-seeking-bg {
+  background: url("seeking.gif");
+}
